[issue:0001452] en_GB locales removed because the english translation is already contained in the default bundle. And merged with trunk

--- a/src/main/resources/Sirius/util/DBVersionChecker/Bundle_de_DE.properties
+++ b/src/main/resources/Sirius/util/DBVersionChecker/Bundle_de_DE.properties
@@ -1,6 +1,6 @@
 DOMVersionChecker.main(String[]).helpText=Aufruf:{0} a) PROG <configfile> generiere <neuer Vesionsname>{0} b) PROG <configfile> version{0} c) PROG <configfile> vergleiche <Versionsname>{0}{0}    Achtung - im Fall a) wird die im configfile angegebene {0}    XML Datei neu erzeugt und muss in die Versionsliste {0}    aufgenommen werden
 DOMVersionChecker.DOMVersionChecker(String).error=Fehler beim Lesen des configfiles:
-DOMVersionChecker.main(String[]).foundVersion=Gefundene Version:
+DOMVersionChecker.main(String[]).foundVersion=Gefundene Version: {0}
 DOMVersionChecker.main(String[])..noProperVersion=F\u00FCr die angegebene Datenbank wurde keine \u00FCbereinstimmende Definition gefunden.
 DOMVersionChecker.main(String[]).accordanceFound=Vollst\u00E4ndige \u00DCbereinstimmung gefunden.
 DOMVersionChecker.main(String[]).noAccordanceFound=Versionen stimmen nicht \u00FCberein:
